Update deploy_browsermob.sh